syntax = "proto3";

package pb;

option go_package = "pb/";

message GetUserByIdRequest {
    int32 user_id = 1;
}

message GetUserByIdResponse {
    bool exists = 1;
    string message = 2;
    UserBasicInfo user = 3;
}

message UserBasicInfo {
    int32 id = 1;
    string username = 2;
    string full_name = 3;
    string avatar_url = 4;
    bool is_active = 5;
}

service UserService {
    rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
}